Fix <ul> margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ only screen and (max-width: 720px) {
 		width: 100%;
 		padding-top: 0;
 	}
-	body > p, h1, h2, h3, h4, blockquote, nav {
+	body > p, h1, h2, h3, h4, ul, ol, blockquote, nav {
 		margin-left: 15px;
 		margin-right: 15px;
 	}
